created screen of favorites
